Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Ritaman Sarkar</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>Student at Ashoka University, majoring in Philosophy and Computer Science <a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / <a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -470,4 +470,5 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
