Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper" style="background-color: magenta;">
 
 				<!-- Intro -->
 					<section class="intro">
@@ -470,5 +470,6 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
