Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 					<section class="intro">
 						<header>
 							<h1>Ritaman Sarkar</h1>
-							<p>Student at Ashoka University, majoring in Philosophy and Computer Science <a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / <a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a></p>
+							<p>Student at Ashoka University, majoring in Philosophy and Computer Science</p>
+							<p>
+								<a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / 
+  								<a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a>
+							</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -470,6 +474,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
