--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
 
 				<!-- Intro -->
 					<section class="intro">
-						<header>
-							<h1>Ritaman Sarkar</h1>
-							<p>Student at Ashoka University, majoring in Philosophy and Computer Science</p>
-							<p>
-								<a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / 
-  								<a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a>
-							</p>
-							<ul class="actions">
-								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul>
-						</header>
-						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</section>
-
+  <header style="display: flex; align-items: center; gap: 20px;">
+    <div style="flex: 1;">
+      <h1>Ritaman Sarkar</h1>
+      <p>Student at Ashoka University, majoring in Philosophy and Computer Science</p>
+      <p>
+        <a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / 
+        <a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a>
+      </p>
+      <ul class="actions">
+        <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+      </ul>
+    </div>
+    <div style="max-width: 200px;">
+      <img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" style="width: 100%; height: auto;" />
+    </div>
+  </header>
+</section>
 				<!-- Section -->
 					<section id="first">
 						<header>
@@ -474,6 +475,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
