--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <header style="display: flex; align-items: center; gap: 20px;">
     <div style="flex: 1;">
       <h1>Ritaman Sarkar</h1>
-      <p>Student at Ashoka University, majoring in Philosophy and Computer Science</p>
+      <p>Student at Ashoka University, </p>
+		<p>majoring in Philosophy and Computer Science</p>
       <p>
         <a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / 
         <a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a>
@@ -475,6 +476,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
