--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div style="flex: 1;">
       <h1>Ritaman Sarkar</h1>
       <p>Student at Ashoka University, </p>
+		<div style="flex: 1;">
+
 		<p>majoring in Philosophy and Computer Science</p>
       <p>
         <a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / 
@@ -476,6 +478,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
