--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
       </ul>
     </div>
+	  <div class="content">
     <div style="max-width: 200px;">
       <img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" style="width: 70%; height: auto;" />
     </div>
+		  </div>
   </header>
 </section>
 				<!-- Section -->
@@ -478,6 +480,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
