--- a/index.html
+++ b/index.html
@@ -33,16 +33,12 @@
         <a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a>
       </p>
       <ul class="actions">
-        <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
-      </ul>
-    </div>
-	  <div class="content">
-      <img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" style="width: 70%; height: auto;" />
-    </div>
-	 
-  
-		 
-  </header>
+      <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+    </ul>
+  </div>
+  <div>
+    <img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" style="width: 100%; height: auto;" />
+  </div>
 </section>
 				<!-- Section -->
 					<section id="first">
@@ -484,6 +480,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
