--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
     </ul>
   </div>
-  <div>
-    <img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" style="width: 100%; height: auto;" />
+  <div class="content">
+    <span class="image main"><img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" style="width: 100%; height: auto;" /></span>
   </div>
 </section>
 				<!-- Section -->
@@ -480,6 +480,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
