--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
       <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
     </ul>
   </div>
-  <div class="content">
-    <span class="image main"><img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" style="width: 100%; height: auto;" /></span>
-  </div>
+  
 </section>
 				<!-- Section -->
 					<section id="first">
@@ -49,7 +47,7 @@
 						<div class="content">
 							
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image main"><img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" /></span>
 						</div>
 					</section>
 
@@ -480,6 +478,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
