Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div style="flex: 1;">
       <h1>Ritaman Sarkar</h1>
 		
-      <p>Student at Ashoka University, 
+      <p>Student at Ashoka University, </p>
 		
 
-	majoring in Philosophy and Computer Science</p>
+	<p><strong>majoring in Philosophy and Computer Science</strong></p>
       <p>
         <a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / 
         <a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a>
@@ -478,6 +478,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
