--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, td, blockquote {
+  color: #fff !important;
+}
+</style>
 	</head>
 	<body class="is-preload">
 
@@ -478,6 +483,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
