--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 					<section id="first">
 						  
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>About me</h2>
 						</header>
 						<div class="content">
 							
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p> Hi! I'm Ritaman, a 3rd undergrad student at Ashoka University (close to New Delhi, India) and I'm majoring in Philosophy and Computer Science. I’m interested in working in AI Governance and tackling key philosophical and ethical issues in this field in the near future and I’m currently working to create an outline for my undergraduate thesis which tries to reconcile philophers of futurity like Deleuze, Guattari, Focault etc. with AI that seeks to benefit rather than destroy. Other things I'm interested in are literature, critical theory, psychoanalysis etc. I'm also deeply excited by issues in Indian Philsophy and my most favourite schools include Kaśmir Śaivism and the sub-schools of Tantra. </p>
 							<span class="image main"><img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" /></span>
 						</div>
 					</section>
@@ -483,6 +483,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
