--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 						</header>
 						<div class="content">
 							
-							<p> Hi! I'm Ritaman, a 3rd undergrad student at Ashoka University (close to New Delhi, India) and I'm majoring in Philosophy and Computer Science. I’m interested in working in AI Governance and tackling key philosophical and ethical issues in this field in the near future and I’m currently working to create an outline for my undergraduate thesis which tries to reconcile philophers of futurity like Deleuze, Guattari, Focault etc. with AI that seeks to benefit rather than destroy. Other things I'm interested in are literature, critical theory, psychoanalysis etc. I'm also deeply excited by issues in Indian Philsophy and my most favourite schools include Kaśmir Śaivism and the sub-schools of Tantra. </p>
+							<p> Hi! I'm Ritaman, a 3rd undergrad student at Ashoka University (close to New Delhi, India) and I'm majoring in Philosophy and Computer Science. I’m interested in working in AI Governance and tackling key philosophical and ethical issues in this field in the near future. Currently I'm working to create an outline for my undergraduate thesis which tries to reconcile philophers of futurity like Deleuze, Guattari, Focault etc. with AI that seeks to benefit rather than destroy. Other things I'm interested in are literature, critical theory, psychoanalysis etc. I'm also deeply excited by issues in Indian Philsophy and my most favourite schools include Kaśmir Śaivism and the sub-schools of Tantra. </p>
 							<span class="image main"><img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" /></span>
 						</div>
 					</section>
@@ -483,6 +483,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
