--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
       <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
     </ul>
   </div>
+	  </header>
   
 </section>
 				<!-- Section -->
@@ -483,6 +484,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
