--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
   </div>
 	  </header>
 						<div class="content">
-							<span class="image main"><img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" /></span>
+							<span class="image main" style="margin-top: 20px;"><img src="images/WhatsApp Image 2025-10-24 at 13.29.23.jpeg" alt="" /></span>
+
 						</div>
   
 </section>
@@ -487,6 +488,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
