--- a/index.html
+++ b/index.html
@@ -64,19 +64,43 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Blog</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+							<p>
+								I like writing about Philosophy, AI and a bit of literary criticism too from time to time :)
+							</p>
+									<ul class="blog-list">
+										  <li>
+   
+										<a href="assets/eps fin essay.pdf" download>
+      Download: "To Love is to See"
+    </a>
+    <p class="blog-description">An essay dealing with the Philosophy of Love: Love as an intstrument of political resistance.</p
+								<li>
+									<a href="https://ritamansarkar.medium.com/lover-why-do-you-play-games-17cc85afcc08" target="_blank" rel="noopener noreferrer">Lover, why do you play games?</a>
+									<p class="blog-description">This short essay explores a recurrent literary trope in a class of literature in Indian Philosophy called Tantras, or Śakta Āgamas: what does this trope reveal about the nature of the relationship between the Self and the Other? .</p>
+								</li>
+								<li>
+									<a href="assets/Miltonian Metaphysics.pdf" download>
+      Download: "Miltonian Metaphysics"
+    </a>
+    <p class="blog-description">An essay in Comparative Philosophy, a metaphysical account of the creation of the universe and the nature of God, as found in Milton's text: Paradise Lost. .</p
+								</li>
+										
+								<li>
+									<a href="https://ritamansarkar.medium.com/eternal-vigilance-is-the-price-of-liberty-thomas-jefferson-65d7cef7df3f" target="_blank" rel="noopener noreferrer">Gender, Trouble and Love: From Anarkali to Leela</a>
+									<p class="blog-description">This essay examines portions of two massively popular Indian films and explores feminist politics rooted in India's history as depicted in postmodern cinema.</p>
+								</li>
+								<li>
+									<a href="https://ritamansarkar.medium.com/what-do-we-stand-for-from-chandrabatis-plight-to-rama-s-valour-f30cd110dff8" target="_blank" rel="noopener noreferrer">What do we stand for: from Chandrabati’s plight to Rama’s valour</a>
+									<p class="blog-description">Talks about a certain proto-feminist retelling of the Rāmāyaṇa.</p>
+								</li>
+								<li>
+									<a href="https://ritamansarkar.medium.com/" target="_blank" rel="noopener noreferrer">View All Posts on Medium →</a>
+								</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							
 						</div>
 					</section>
 
@@ -488,6 +512,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
