--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
       Download: "To Love is to See"
     </a>
     <p class="blog-description">An essay dealing with the Philosophy of Love: Love as an intstrument of political resistance.</p> </li>
+
+										<li>
+    <a href="assets/aiandphilFINAL.pdf" download>
+      Download: "Is AI-written poetry original?"
+    </a>
+    <p class="blog-description">An essay which tries to grapple with the question of what is originality and asks: can AI be a poet? </p>
+  </li>
 								<li>
 									<a href="https://ritamansarkar.medium.com/lover-why-do-you-play-games-17cc85afcc08" target="_blank" rel="noopener noreferrer">Lover, why do you play games?</a>
 									<p class="blog-description">This short essay explores a recurrent literary trope in a class of literature in Indian Philosophy called Tantras, or Śakta Āgamas: what does this trope reveal about the nature of the relationship between the Self and the Other? .</p>
@@ -512,6 +519,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
