--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
   </li>
 									
 								</section>
-
+<section>
 							
 								<header>
 
@@ -168,6 +168,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
