--- a/index.html
+++ b/index.html
@@ -111,22 +111,16 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 						</div>
 					</section>
 
-				<!-- Section -->
-					<section>
-						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
-						</header>
-						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+			
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>CV and how to reach me</h3>
+										<h3>Resume</h3>
 										</header>
 									<li>
     <a href="assets/Resume_Ritaman_Sarkar_Ashoka.pdf" download>
-      Download: "Ritaman's CV"
+      Download: "Ritaman's Resume"
     </a>
    
   </li>
@@ -168,6 +162,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
