--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-		<div id="wrapper" style="background-color: red;">
+		<div id="wrapper" style="background-color: #660000;">
 
 				<!-- Intro -->
 					<section class="intro">
@@ -160,6 +160,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
