--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 						</header>
 						<div class="content">
 							
-							<p> Hi! I'm Ritaman, a 3rd year undergrad student at Ashoka University (close to New Delhi, India) and I'm majoring in Philosophy and Computer Science. I’m interested in working in AI Governance and tackling key philosophical and ethical issues in this field in the near future. Currently I'm working to create an outline for my undergraduate thesis which tries to reconcile philophers of futurity like Deleuze, Guattari, Focault etc. with AI that seeks to benefit rather than destroy. Other things I'm interested in are literature, critical theory, psychoanalysis etc. I'm also deeply excited by issues in Indian Philsophy and my most favourite schools include Kaśmir Śaivism and the sub-schools of Tantra. 
+							<p> Hi! I'm Ritaman, a 3rd year undergrad student at <a href="https://www.ashoka.edu.in/">Ashoka University</a> (close to New Delhi, India) and I'm majoring in Philosophy and Computer Science. I’m interested in working in AI Governance and tackling key philosophical and ethical issues in this field in the near future. Currently I'm working to create an outline for my undergraduate thesis which tries to reconcile philophers of futurity like Deleuze, Guattari, Focault etc. with AI that seeks to benefit rather than destroy. Other things I'm interested in are literature, critical theory, psychoanalysis etc. I'm also deeply excited by issues in Indian Philsophy and my most favourite schools include Kaśmir Śaivism and the sub-schools of Tantra. 
 							</p>
-							<p> The most recent project I was working on was called "Poetry in Parliament" and I was working under Professor Aalok Thakkar. This is a personal project which seeks to convert scanned pdfs of the Parliamentary debated of the Indian parliament into machine-readable .txt files, furthur using these to answer quantitative questions, by the help of an integrated LLM, regarding the usage and significance of poetry in the rhetoric-building of the largest democracy of the world. </p>
+							<p> The most recent project I was working on was called "Poetry in Parliament" and I was working under <a href="https://www.ashoka.edu.in/profile/aalok-thakkar/">Professor Aalok Thakkar</a>. This is a personal project which seeks to convert scanned pdfs of the Parliamentary debated of the Indian parliament into machine-readable .txt files, furthur using these to answer quantitative questions, by the help of an integrated LLM, regarding the usage and significance of poetry in the rhetoric-building of the largest democracy of the world. </p>
 							
 						</div>
 					</section>
@@ -163,6 +163,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
