--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 										  <li>
    
 										<a href="assets/eps fin essay.pdf" download>
-      Download: "To Love is to See"
+      "To Love is to See"
     </a>
     <p class="blog-description">An essay dealing with the Philosophy of Love: Love as an intstrument of political resistance.</p> </li>
 
 										<li>
     <a href="assets/aiandphilFINAL.pdf" download>
-      Download: "Is AI-written poetry original?"
+     "Is AI-written poetry original?"
     </a>
     <p class="blog-description">An essay which tries to grapple with the question of what is originality and asks: can AI be a poet? </p>
   </li>
@@ -93,7 +93,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 								</li>
 								<li>
 									<a href="assets/Miltonian Metaphysics.pdf" download>
-      Download: "Miltonian Metaphysics"
+   "Miltonian Metaphysics"
     </a>
     <p class="blog-description">An essay in Comparative Philosophy, a metaphysical account of the creation of the universe and the nature of God, as found in Milton's text: Paradise Lost. .</p
 								</li>
@@ -163,6 +163,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
