--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
     </a>
     <p class="blog-description">An essay which tries to grapple with the question of what is originality and asks: can AI be a poet? </p>
   </li>
-								<li>
+									<li>
+									<a href="https://www.ashokaphilsoc.org/blogs/raktabija.html" target="_blank" rel="noopener noreferrer">RaktabījaVināśinī: The vanquisher of Raktabīja
+</a>
+									<p class="blog-description">Published on the official page of Ashoka University's Philosophy Society, this essay analyses a myth found in an ancient Hindu text, the Devī Māhātmya or the Durgā-Saptaśatī. From this myth I try to derive a theoy which concerns epistemology, knowledge-production to be specific.   </p>
+								</li>
+										<li>
 									<a href="https://ritamansarkar.medium.com/lover-why-do-you-play-games-17cc85afcc08" target="_blank" rel="noopener noreferrer">Lover, why do you play games?</a>
 									<p class="blog-description">This short essay explores a recurrent literary trope in a class of literature in Indian Philosophy called Tantras, or Śakta Āgamas: what does this trope reveal about the nature of the relationship between the Self and the Other? .</p>
 								</li>
@@ -163,6 +168,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
