--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 }
 			
 </style>
+		<style>
+			@media (max-width: 600px) {
+  body,
+  #wrapper,
+  section,
+  header,
+  div,
+  .content {
+    background-color: #800020 !important; /* Burgundy */
+    color: #fff !important; /* White text */
+  }
+
+  h1, h2, h3, h4, h5, h6, p, a, li, span, input, textarea, label, th, td, blockquote {
+    color: #fff !important; /* White text */
+  }
+}
+</style>
 	</head>
 	<body class="is-preload">
 
@@ -168,6 +185,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
