--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
       <p>3rd Year UG Student at Ashoka University, 
 		
 
-	majoring in Philosophy and Computer Science</p>
+	majoring in Philosophy and Computer Science, minor in Literature</p>
       <p>
         <a href="https://x.com/badmos_billa?s=21">@badmos_billa</a> / 
         <a href="https://ritamansarkar.medium.com/">ritamansarkar.medium</a>
@@ -185,6 +185,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
