--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
     <p class="blog-description">An essay dealing with the Philosophy of Love: Love as an intstrument of political resistance.</p> </li>
 
 										<li>
-    <a href="assets/aiandphilFINAL.pdf" download>
-     "Is AI-written poetry original?"
+    <a href="assets/Can AI be a Poet?.pdf" download>
+     Can AI be a Poet?
     </a>
-    <p class="blog-description">An essay which tries to grapple with the question of what is originality and asks: can AI be a poet? </p>
+    <p class="blog-description">An essay which tries to grapple with the question of what is originality, nature of experience (sensory or otherwise) and asks: can AI be a poet? </p>
   </li>
 									<li>
 									<a href="https://www.ashokaphilsoc.org/blogs/raktabija.html" target="_blank" rel="noopener noreferrer">RaktabījaVināśinī: The vanquisher of Raktabīja
@@ -185,6 +185,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
