--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 
 	majoring in Philosophy and Computer Science, minor in Literature</p>
       <p>
-        <a Institutional email: ritaman.sarkar_ug2023@ashoka.edu.in</a> / 
-        <a Personal email: ritamansarkar@gmail.com</a>
+        Institutional email: ritaman.sarkar_ug2023@ashoka.edu.in </p>
+        <p>Personal email: ritamansarkar@gmail.com
       </p>
       <ul class="actions">
       <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -185,6 +185,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
