--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 										  <li>
    
 										<a href="assets/eps fin essay.pdf" download>
-      "To Love is to See"
+      To Love is to See
     </a>
     <p class="blog-description">An essay dealing with the Philosophy of Love: Love as an intstrument of political resistance.</p> </li>
 
@@ -185,6 +185,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
