--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
     <p class="blog-description">An essay dealing with the Philosophy of Love: Love as an intstrument of political resistance.</p> </li>
 
 										<li>
-    <a href="assets/Can AI be a Poet?.pdf" download>
+    <a href="assets/Can AI be a Poet.pdf" download>
      Can AI be a Poet?
     </a>
     <p class="blog-description">An essay which tries to grapple with the question of what is originality, nature of experience (sensory or otherwise) and asks: can AI be a poet? </p>
@@ -185,6 +185,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
