--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 								</li>
 								<li>
 									<a href="assets/Miltonian Metaphysics.pdf" download>
-   "Miltonian Metaphysics"
+   "Miltonian" Metaphysics: A poetic theory on the Nature of God and origin of the universe
     </a>
     <p class="blog-description">An essay in Comparative Philosophy, a metaphysical account of the creation of the universe and the nature of God, as found in Milton's text: Paradise Lost. .</p
 								</li>
@@ -185,6 +185,7 @@ body, h1, h2, h3, h4, h5, h6, p, a, li, span, div, input, textarea, label, th, t
 	</body>
 
 </html>
+
 
 
 
